--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "express": "~4.15.2",
     "debug": "~2.6.3",
-    "morgan": "~1.8.1",    
+    "express": "~4.15.2",
+    "express-graphql": "^0.6.5",
+    "graphql": "^0.9.6",
+    "graphql-sequelize": "^5.3.2",
+    "morgan": "~1.8.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4"
