--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.15.2",
     "express-graphql": "^0.6.5",
     "graphql": "^0.9.6",
+    "graphql-relay": "^0.5.1",
     "graphql-sequelize": "^5.3.2",
     "morgan": "~1.8.1",
     "pg": "^6.1.5",
