--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-graphql": "^0.6.5",
+    "express-jwt": "^5.3.0",
     "graphql": "^0.9.6",
     "graphql-relay": "^0.5.1",
     "graphql-sequelize": "^5.3.2",
+    "jsonwebtoken": "^7.4.1",
     "morgan": "~1.8.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
