--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "supervisor -watch src,routes,bin node ./bin/www",
     "start": "node ./bin/www",
-    "test": "node_modules/.bin/mocha src/users/models/test.js"
+    "test": "node_modules/.bin/mocha tests/integretion.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "faker": "^4.1.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
   }
 }
