--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "faker": "^4.1.0",
     "mocha": "^3.4.2",
+    "proxyquire": "^1.8.0",
     "supertest": "^3.0.0"
   }
 }
