--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "sequelize": "^3.30.4"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "faker": "^4.1.0",
     "mocha": "^3.4.2",
     "proxyquire": "^1.8.0",
